# pg2iceberg

./: .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  go.mod  pg2iceberg-rust-port-plan.md
api/: server.go
benchmark/: pg2iceberg.yaml
config/: config.go  config_test.go
crates/pg2iceberg-stream/: Cargo.toml
crates/pg2iceberg-stream/src/: blob.rs  codec.rs  lib.rs  rolling.rs
crates/pg2iceberg-stream/src/prod/: object_store_blob.rs
crates/pg2iceberg-stream/tests/: codec_props.rs
crates/pg2iceberg-tests/: Cargo.toml
crates/pg2iceberg-tests/src/: lib.rs
crates/pg2iceberg-tests/tests/: cleanup_orphans_e2e.rs  compact_e2e.rs  dst.rs  dst_chaos_soak.rs  dst_cleanup.rs  dst_decimal.rs  dst_distributed.rs  dst_dml_correctness.rs  dst_fault.rs  dst_markers.rs  dst_meta_tables.rs  dst_schema_evolution.rs  dst_slot_health.rs  dst_table_lifecycle.rs  expire_e2e.rs  integration_coord.rs  integration_lifecycle.rs  integration_pg_replication.rs
example/: config.yaml  docker-compose.yml  schema.sql
iceberg/: bearer.go  catalog.go  compact.go  events_schema.go  factory.go  maintain.go  maintain_test.go  manifest.go  parquet_reader.go  partition.go  postgis_test.go  s3.go  s3_vended.go  s3_vended_router.go  s3_vended_test.go  sigv4.go  snapshot_writer.go  tablewriter.go  writer.go  writer_test.go
logical/: cleanup.go  events.go  events_test.go  logical.go  materializer.go  pipeline.go  pipeline_integration_test.go  snapshot.go  types.go
pipeline/: checkpoint.go  checkpoint_pg.go  clickhouse.go  filestore.go  manager.go  metrics.go  pgstore.go  pipeline.go  pipeline_integration_test.go  store.go  validate.go  validate_test.go
postgres/: event.go  schema.go  schema_integration_test.go  schema_test.go
query/: pipeline.go  pipeline_integration_test.go  poller.go
sink/: catalog.go  compactor.go  manifest.go  materializer.go  partition.go  sink.go  (+2 more)
(+141 files in other folders)
