[package]
name = "pg2iceberg-stream"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
pg2iceberg-core.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
arrow-array = "54"
arrow-schema = "54"
arrow-buffer = "54"
parquet = { version = "54", default-features = false, features = ["arrow", "snap"] }
bytes = "1"

[dev-dependencies]
proptest.workspace = true
pollster = "0.4"
