[package]
name = "pg2iceberg-tests"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
pg2iceberg-core.workspace = true
pg2iceberg-sim.workspace = true

[dev-dependencies]
pg2iceberg-coord.workspace = true
pg2iceberg-iceberg.workspace = true
pg2iceberg-logical.workspace = true
pg2iceberg-pg.workspace = true
pg2iceberg-snapshot.workspace = true
pg2iceberg-stream.workspace = true
pg2iceberg-validate.workspace = true
bytes = "1"
pollster = "0.4"
proptest.workspace = true
tokio = { version = "1", features = ["rt", "macros", "time"] }
